# PAAI

./: .gitignore  CMakeLists.txt  Makefile  paper.tex  revision1.tex  revision2.tex  submission.tex  time.numbers
csrc/: CMakeLists.txt  Problem.cpp  Problem.h  vary.cpp
doc/: paper.tex
doc/include/: abstract.tex  analysis.tex  appendix.tex  common.tex  definitions.tex  experimental-results.tex  illustrative-example.tex  interpolation.tex  introduction.tex  modeling.tex  pf-power-model.tex  pf-thermal-model.tex  pf-timing-model.tex  pf-uncertain-parameters-processing.tex  pf-uncertain-parameters.tex  preliminaries.tex  present-work.tex  prior-work.tex  problem-formulation.tex  proposed-framework.tex  references.bib  solution.tex  stochastic-collocation.tex
include/: abstract.tex  acknowledgments.tex  analysis.tex  authors.tex  biography.tex  conclusion.tex  definitions.tex  description.tex  example.tex  experimental-results.tex  experimentation.tex  experiments.tex  interpolation.tex  introduction.tex  modeling.tex  overview.tex  preliminaries.tex  present-work.tex  prior-work.tex  problem-formulation.tex  problem.tex  references.bib  solution.tex
include/analysis/: moments.tex  outputs.tex
include/assets/: beta.tex  rule.tex
include/description/: example.tex  preliminaries.tex
include/experimentation/: configuration.tex  deployment.tex  (+2 more)
msrc/: Constants.m  init.m  setup.m
run/: Makefile
src/: Constants.m  cache.go  command.go  config.go  correlation.go  correlation_test.go  main.go  marginals.go  problem.go  problem_test.go  setup.m  worker.go
(+261 files in other folders)
